Initial permissions, added !kick, !bans, !userid, !topic, !roll, and !eval
Nobody has permission to invoke !eval by default since it's a huge security hole, but it's far too cool of an idea to not have. For now remember anyone you give !eval permission effectively has permission to log in to your server as whatever user you run DiscordBot as. Unless I can figure out how to make it secure I don't want the illusion of security.

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,8 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
-#auth file shouldn't be checked in!
+#config files
 auth.json
-
-#other runtime config files
 rss.json
 alias.json
+permissions.json
